--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,7 +6,7 @@
 	--text-color: 218, 218, 218;
 	--logo-color: 102, 228, 102;
 	--danger-color: 192, 90, 90;
-	--secondary-color: 221, 221, 171;
+	--secondary-color: 215, 215, 127;
 }
 
 /* reset */
@@ -192,6 +192,10 @@ form .button {
 }
 
 /* images */
+.tiny-img-ctn {
+	width: 40px;
+	height: 40px;
+}
 .img-ctn {
 	width: 300px;
 	height: 300px;
@@ -210,9 +214,16 @@ a:focus {
 	outline: 2px solid rgb(var(--logo-color));
 }
 
+.link {
+	color: rgb(var(--logo-color));
+	text-decoration: underline;
+	text-underline-offset: 4px;
+}
+
 .button {
 	display: block;
 	width: fit-content;
+	text-align: center;
 	padding-inline: 1em;
 	padding-block: 0.5em;
 	border: 1px solid black;
@@ -272,4 +283,120 @@ a:focus {
 
 .ql-snow .ql-stroke {
 	stroke: rgb(var(--text-color)) !important;
+}
+
+/* bulma */
+.dropdown {
+	--bulma-dropdown-menu-min-width: 12rem;
+	--bulma-dropdown-content-background-color: var(--bulma-scheme-main);
+	--bulma-dropdown-content-offset: 0.25rem;
+	--bulma-dropdown-content-padding-bottom: 0.5rem;
+	--bulma-dropdown-content-padding-top: 0.5rem;
+	--bulma-dropdown-content-radius: var(--bulma-radius);
+	--bulma-dropdown-content-shadow: var(--bulma-shadow);
+	--bulma-dropdown-content-z: 20;
+	--bulma-dropdown-item-h: var(--bulma-scheme-h);
+	--bulma-dropdown-item-s: var(--bulma-scheme-s);
+	--bulma-dropdown-item-l: var(--bulma-scheme-main-l);
+	--bulma-dropdown-item-background-l: var(--bulma-scheme-main-l);
+	--bulma-dropdown-item-background-l-delta: 0%;
+	--bulma-dropdown-item-hover-background-l-delta: var(
+		--bulma-hover-background-l-delta
+	);
+	--bulma-dropdown-item-active-background-l-delta: var(
+		--bulma-active-background-l-delta
+	);
+	--bulma-dropdown-item-color-l: var(--bulma-text-strong-l);
+	--bulma-dropdown-item-selected-h: var(--bulma-link-h);
+	--bulma-dropdown-item-selected-s: var(--bulma-link-s);
+	--bulma-dropdown-item-selected-l: var(--bulma-link-l);
+	--bulma-dropdown-item-selected-background-l: var(--bulma-link-l);
+	--bulma-dropdown-item-selected-color-l: var(--bulma-link-invert-l);
+	--bulma-dropdown-divider-background-color: var(--bulma-border-weak);
+}
+
+.dropdown {
+	display: inline-flex;
+	position: relative;
+	vertical-align: top;
+}
+.dropdown.is-active .dropdown-menu,
+.dropdown.is-hoverable:hover .dropdown-menu {
+	display: block;
+}
+.dropdown.is-right .dropdown-menu {
+	left: auto;
+	right: 0;
+}
+.dropdown.is-up .dropdown-menu {
+	bottom: 100%;
+	padding-bottom: var(--bulma-dropdown-content-offset);
+	padding-top: initial;
+	top: auto;
+}
+
+.dropdown-menu {
+	display: none;
+	left: 0;
+	min-width: var(--bulma-dropdown-menu-min-width);
+	padding-top: var(--bulma-dropdown-content-offset);
+	position: absolute;
+	top: 100%;
+	z-index: var(--bulma-dropdown-content-z);
+}
+
+.dropdown-content {
+	background-color: black;
+	border-radius: 5px;
+	padding: 0.5em 0.25em;
+}
+
+.dropdown-item {
+	color: rgb(var(--text-color));
+	display: block;
+	font-size: 0.875rem;
+	line-height: 1.5;
+	padding: 0.375rem 1rem;
+}
+
+a.dropdown-item,
+button.dropdown-item {
+	color: rgb(var(--text-color));
+	padding-inline-end: 3rem;
+	text-align: inherit;
+	white-space: nowrap;
+	width: 100%;
+}
+a.dropdown-item:hover,
+button.dropdown-item:hover {
+	background: rgba(var(--bkgd-color), 0.8);
+}
+a.dropdown-item:active,
+button.dropdown-item:active {
+	--bulma-dropdown-item-background-l-delta: var(
+		--bulma-dropdown-item-active-background-l-delta
+	);
+	--bulma-dropdown-item-border-l-delta: var(
+		--bulma-dropdown-item-active-border-l-delta
+	);
+}
+a.dropdown-item.is-active,
+a.dropdown-item.is-selected,
+button.dropdown-item.is-active,
+button.dropdown-item.is-selected {
+	--bulma-dropdown-item-h: var(--bulma-dropdown-item-selected-h);
+	--bulma-dropdown-item-s: var(--bulma-dropdown-item-selected-s);
+	--bulma-dropdown-item-l: var(--bulma-dropdown-item-selected-l);
+	--bulma-dropdown-item-background-l: var(
+		--bulma-dropdown-item-selected-background-l
+	);
+	--bulma-dropdown-item-color-l: var(--bulma-dropdown-item-selected-color-l);
+}
+
+.dropdown-divider {
+	background-color: var(--bulma-dropdown-divider-background-color);
+	border: none;
+	display: block;
+	height: 1px;
+	margin: 0.5rem 0;
 }
