--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,128 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta
-			name="viewport"
-			content="width=device-width, initial-scale=1.0"
-		/>
-		<meta
-			http-equiv="Content-Type"
-			content="text/html;charset=UTF-8"
-		/>
-		<title>{% block title %}{% endblock %} - hookneedle</title>
-		<link
-			rel="stylesheet"
-			href="{{ url_for('static', filename='css/output-style.css') }}"
-		/>
-		<link
-			href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css"
-			rel="stylesheet"
-		/>
-
-		<link
-			rel="preconnect"
-			href="https://fonts.googleapis.com"
-		/>
-		<link
-			rel="preconnect"
-			href="https://fonts.gstatic.com"
-			crossorigin
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
-			rel="stylesheet"
-		/>
-		<script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
-	</head>
-	<body class="inria-sans-regular">
-		<header>
-			<nav
-				class="mx-auto flex flex-col justify-center max-w-7xl items-center p-6 lg:px-8 sm:flex-row sm:justify-between"
-				role="navigation"
-				aria-label="main navigation"
-			>
-				<div
-					class="flex items-center justify-center sm:justify-start w-fit"
-				>
-					<a href="/">
-						<img
-							src="{{ url_for('static', filename='logo.svg') }}"
-							alt="hookneedle logo"
-							class="h-8 w-auto"
-						/>
-					</a>
-					<div class="-ms-4 text-lg me-4">hookneedle</div>
-				</div>
-				<div class="flex items-center justify-center gap-2">
-					{% if g.user %}
-					<span>hello, {{ g.user['username'] }}</span>
-					<a
-						class="button"
-						href="{{ url_for('auth.logout') }}"
-					>
-						Log out
-					</a>
-					{% else %}
-					<a
-						class="button is-primary"
-						href="{{ url_for('auth.register') }}"
-					>
-						<strong>Register</strong>
-					</a>
-					<a
-						class="button"
-						href="{{ url_for('auth.login') }}"
-					>
-						Log in
-					</a>
-					{% endif %}
-				</div>
-			</nav>
-			{% if g.user %}
-			<nav
-				role="menubar"
-				class="mx-auto flex justify-center max-w-7xl items-center px-6 py-2 lg:px-8 sm:flex-row sm:justify-end bg-gray-800"
-			>
-				<ul class="flex justify-end gap-4">
-					<li role="none">
-						<a
-							href="/user/profile/{{ g.user['id'] }}"
-							role="menuitem"
-							>Profile</a
-						>
-					</li>
-					<li role="none">
-						<a
-							href="/user/{{ g.user['id'] }}/friends"
-							role="menuitem"
-							>Friends</a
-						>
-					</li>
-					<li role="none">
-						<a
-							href="{{ url_for('dash.members')}}"
-							role="menuitem"
-							>Members</a
-						>
-					</li>
-				</ul>
-			</nav>
-			{% endif %}
-		</header>
-		<main class="mx-auto w-full max-w-6xl flex flex-col gap-2">
-			<h1 class="text-center">{% block header %}{% endblock %}</h1>
-			<div class="flex justify-center">
-				{% with messages = get_flashed_messages(with_categories=true) %}
-				{% if messages %} {% for category, message in messages %}
-				<div class="flash max-w-[800px] {{ category }}">
-					{{ message }}
-				</div>
-				{% endfor %} {% endif %} {% endwith %}
-			</div>
-			<section class="flex flex-col gap-4">
-				{% block content %}{% endblock %}
-			</section>
-		</main>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+        <meta name="description"
+              content="hookneedle is a platform for fiber arts project management." />
+        <meta name="keywords" content="hookneedle, projects, members, management" />
+        <title>
+            {% block title %}{% endblock %}
+        - hookneedle</title>
+        <link rel="stylesheet"
+              href="{{ url_for('static', filename='css/output-style.css') }}" />
+        <link href="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.snow.css"
+              rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+              rel="stylesheet" />
+        <link rel="shortcut icon"
+              href="{{ url_for('static', filename='logo.svg') }}">
+        <script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+    </head>
+    <body class="inria-sans-regular">
+        <header>
+            <nav class="mx-auto flex flex-col justify-center max-w-7xl items-center p-6 lg:px-8 sm:flex-row sm:justify-between"
+                 role="navigation"
+                 aria-label="main navigation">
+                <div class="flex items-center justify-center sm:justify-start w-fit">
+                    <a href="/">
+                        <img width="300"
+                             height="300"
+                             src="{{ url_for('static', filename='logo.svg') }}"
+                             alt="hookneedle logo"
+                             class="h-8 w-auto" />
+                    </a>
+                    <div class="-ms-4 text-lg me-4">hookneedle</div>
+                </div>
+                <div class="flex items-center justify-center gap-2">
+                    {% if g.user %}
+                        <span>hello, {{ g.user['username'] }}</span>
+                        <a class="button" href='{{ url_for("auth.logout") }}'>Log out</a>
+                    {% else %}
+                        <a class="button is-primary" href='{{ url_for("auth.register") }}'>
+                            <strong>Register</strong>
+                        </a>
+                        <a class="button" href='{{ url_for("auth.login") }}'>Log in</a>
+                    {% endif %}
+                </div>
+            </nav>
+            {% if g.user %}
+                <nav role="menubar"
+                     class="mx-auto flex justify-center max-w-7xl items-center px-6 py-2 lg:px-8 sm:flex-row sm:justify-end bg-[#2C262C]">
+                    <ul class="flex justify-end gap-4">
+                        <li role="none">
+                            <a href='/' role="menuitem">Dashboard</a>
+                        </li>
+                        <li role="none">
+                            <a href="/user/profile/{{ g.user['id'] }}" role="menuitem">Profile</a>
+                        </li>
+                        <li role="none">
+                            <a href='{{ url_for("dash.members") }}' role="menuitem">Members</a>
+                        </li>
+                    </ul>
+                </nav>
+            {% endif %}
+        </header>
+        <main class="mx-auto w-full max-w-6xl flex flex-col gap-2">
+            <h1 class="text-center">
+                {% block header %}{% endblock %}
+            </h1>
+            <div class="flex justify-center">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                    {% if messages %}
+                        {% for category, message in messages %}<div class="flash max-w-[800px] {{ category }}">{{ message }}</div>{% endfor %}
+                    {% endif %}
+                {% endwith %}
+            </div>
+            <section class="flex flex-col gap-4">
+                {% block content %}{% endblock %}
+            </section>
+        </main>
+    </body>
 </html>
