--- a/app/templates/dash/index.html
+++ b/app/templates/dash/index.html
@@ -1,55 +1,161 @@
-{% extends 'base.html' %} {% block header %} {% block title %}Home{% endblock %}
-{% endblock %} {% block content %} {% if not g.user %}
+{% extends 'base.html' %}
+{% block header %}
+    {% block title %}Home{% endblock %}
+{% endblock %}
+{% block content %}
+    {% if not g.user %}
+        <div class="hero">
+            <div>
+                <h2>hookneedle</h2>
+                <p>
+                    Keep track of your crochet/knitting projects and connect with
+                    others!
+                </p>
+                <a class="button" href="/auth/register">Register Now</a>
+            </div>
+        </div>
+    {% else %}
+        <h2>Your Dashboard</h2>
+        <div class="flex flex-col w-full h-auto p-4 gap-2 border-1 rounded-[5px] border-black">
+            <h2>Notifications</h2>
+            {% if not notifs %}
+                <div>You have no notifications.</div>
+            {% else %}
+                <ul class="flex flex-col gap-2">
+                    {% for notif in notifs %}
+                        <li>
+                            <a class="button is-secondary add-friend"
+                               data-id="{{ notif['user1_id'] }}">Accept Friend Request from {{ notif.username }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </div>
+        <div class="grid grid-rows-1 grid-cols-2 gap-4">
+            <div class="flex flex-col w-full h-fit p-4 gap-2 border-1 rounded-[5px] border-black">
+                <h2>Friends</h2>
+                <ul class="flex flex-col gap-2">
+                    {% for friend in friends %}
+                        <li class="bg-[#2C262C] radius-[5px] rounded-[5px]">
+                            <a href="{{ url_for('user.profile', id=friend.friendId) }}"
+                               class="flex items-center gap-4 p-2">
+                                <div class="h-12 w-12">
+                                    {% if friend['image_data'] %}
+                                        <img class="aspect-square"
+                                             src="{{ friend['image_data'] }}"
+                                             alt="image representing the user called {{ friend['friendUsername'] }}" />
+                                    {% else %}
+                                        <div class="bg-gray-700 child h-full">
+                                            <img class="aspect-square"
+                                                 src="{{ url_for('static', filename='logo.png') }}"
+                                                 alt="hookneedle logo because no image available" />
+                                        </div>
+                                    {% endif %}
+                                </div>
+                                <h3>{{ friend.friendUsername }}</h3>
+                            </a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="flex flex-col w-full h-auto p-4 gap-2 border-1 rounded-[5px] border-black">
+                <h2>Your Projects</h2>
+                <a class="button" href='{{ url_for("dash.create") }}'>Add Project</a>
+                <ul class="flex flex-col gap-2">
+                    {% for project in projects %}
+                        <li class="bg-[#2C262C] rounded-[5px] flex justify-between items-center">
+                            <a href="/project/{{ project['id'] }}"
+                               class="flex items-center gap-4 p-2 w-full">
+                                <div class="h-12 w-12">
+                                    {% if project['image_blob'] %}
+                                        <img class="aspect-square"
+                                             src="{{ project['image_blob'] }}"
+                                             alt="image representing the project called {{ project['name'] }}" />
+                                    {% else %}
+                                        <div class="bg-gray-700 child h-full">
+                                            <img class="aspect-square"
+                                                 src="{{ url_for('static', filename='logo.png') }}"
+                                                 alt="hookneedle logo because no image available" />
+                                        </div>
+                                    {% endif %}
+                                </div>
+                                <h3 class="text-center">{{ project['name'] }}</h3>
+                            </a>
+                            <div class="dropdown is-right" data-key="{{ project.id }}">
+                                <div class="dropdown-trigger pe-2">
+                                    <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">≡</button>
+                                </div>
+                                <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                                    <div class="dropdown-content">
+                                        <a href="{{ url_for('dash.edit', id=project.id) }}"
+                                           class="dropdown-item">Edit</a>
+                                        <button id="delete-btn"
+                                                data-id="{{ project.id }}"
+                                                class="dropdown-item button is-danger">Delete</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    {% endif %}
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            let dropdownTrigger = document.querySelectorAll('.dropdown-trigger')
+            let dropdown = document.querySelectorAll('.dropdown')
+            currentKey = null
 
-<div class="hero">
-	<div>
-		<h2>hookneedle</h2>
-		<p>
-			Keep track of your crochet/knitting projects and connect with
-			others!
-		</p>
-		<a
-			class="button"
-			href="/auth/register"
-			>Register Now</a
-		>
-	</div>
-</div>
+            dropdown.forEach(dropdown => {
+                dropdown.addEventListener('click', () => {
+                    currentKey = dropdown.dataset.key;
+                    dropdown.classList.add('is-active'); 
+                })
+            })
 
-{% else %}
 
-<h2>Your Projects</h2>
-<a
-	class="button"
-	href="{{ url_for('dash.create') }}"
-	>Add Project</a
->
-<ul class="grid grid-cols-1 sm:grid-cols-3 md:grid-cols-4 items-stretch gap-8">
-	{% for project in projects %}
-	<li class="w-full h-full">
-		<a
-			href="/project/{{ project['id'] }}"
-			class="button grid place-items-center"
-		>
-			<h3 class="text-center">{{ project['name'] }}</h3>
-			{% if project['image_data'] %}
-			<img
-				class="aspect-square"
-				src="{{ project['image_data'] }}"
-				alt="image representing the project called {{ project['name'] }}"
-			/>
-			{% else %}
-			<div class="bg-gray-700 child h-full">
-				<img
-					class="aspect-square"
-					src="{{ url_for('static', filename='logo.png') }}"
-					alt="hookneedle logo because no image available"
-				/>
-			</div>
-			{% endif %}
-		</a>
-	</li>
-	{% endfor %}
-</ul>
+            document.addEventListener('click', async (e) => {
+                let dropdown = document.querySelector(`[data-key = '${currentKey}']`)
+                if (!e.target.closest(`[data-key = '${currentKey}']`)) {
+                    dropdown?.classList.remove('is-active'); 
+                }
+                if (e.target.id == 'delete-btn'){
+                    console.log('delete button clicked')
+                    projectId = e.target.dataset.id;
+                    if (confirm('Are you sure you want to delete this project?')) {
+                            fetch(`/project/delete/${projectId}`, {
+                                method: 'DELETE',
+                                headers: {
+                                    'Content-type': 'application/json; charset=UTF-8',
+                                },
+                            })
+                            .then((res) => res.json())
+                            .then((data) => {
+                                if (data == 'project successfully deleted') {
+                                    window.location.replace('/');
+                                }
+                            })
+                            .catch((error) =>
+                                console.error('CAUGHT ERROR ON DELETE', error)
+                            );
+                    }
+                }
+            })
 
-{% endif %} {% endblock %}
+            addFriendBtn = document.querySelectorAll('.add-friend');
+
+            addFriendBtn?.forEach(btn => {
+                btn.addEventListener('click', () => {
+                    let friendId = btn.dataset.id;
+
+                    fetch(`/user/addfriend/${friendId}`, {
+                            method: 'POST',
+                        })
+                        .then(()=> window.location.replace(`/user/profile/${friendId}`))
+                        .catch((error) => console.error('CAUGHT ERROR ON POST', error));
+                });
+            })
+        })
+    </script>
+{% endblock %}
