--- a/app/templates/dash/members.html
+++ b/app/templates/dash/members.html
@@ -1,14 +1,34 @@
-{% extends 'base.html' %} {% block header %} {% block title %}Members{% endblock
-%} {% endblock %} {% block content %}
-<div>
-	<ul>
-		{% for member in members %}
-		<li>
-			<a href="{{ url_for('user.profile', id=member.id) }}"
-				>{{member.username}}</a
-			>
-		</li>
-		{% endfor %}
-	</ul>
-</div>
+{% extends 'base.html' %}
+{% block header %}
+    {% block title %}
+        Members
+    {% endblock
+    %}
+{% endblock %}
+{% block content %}
+    <div class="flex flex-col w-full h-fit p-4 gap-2 border-1 rounded-[5px] border-black">
+        <ul class="flex flex-col gap-2">
+            {% for member in members %}
+                <li class="bg-[#2C262C] radius-[5px] rounded-[5px]">
+                    <a href="{{ url_for('user.profile', id=member.id) }}"
+                       class="flex items-center gap-4 p-2">
+                        <div class="h-12 w-12">
+                            {% if member['image_data'] %}
+                                <img class="aspect-square"
+                                     src="{{ member['image_data'] }}"
+                                     alt="image representing the user called {{ member['username'] }}" />
+                            {% else %}
+                                <div class="bg-gray-700 child h-full">
+                                    <img class="aspect-square"
+                                         src="{{ url_for('static', filename='logo.png') }}"
+                                         alt="hookneedle logo because no image available" />
+                                </div>
+                            {% endif %}
+                        </div>
+                        <h3>{{ member.username }}</h3>
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
