--- a/app/templates/dash/project.html
+++ b/app/templates/dash/project.html
@@ -6,24 +6,37 @@
     {% endblock %}
 {% endblock %}
 {% block content %}
-    <div class="flex w-full justify-end gap-4">
-        <a class="button" href="{{ url_for('dash.edit', id=project['id']) }}">Edit Project Info</a>
-        <button id="delete-btn" class="button is-danger">Delete Project</button>
-    </div>
+    {% if g.user['id'] == project['user_id'] %}
+        <div class="flex w-full justify-center sm:justify-end gap-4">
+            <a class="button" href="{{ url_for('dash.edit', id=project['id']) }}">Edit Project Info</a>
+            <button id="delete-btn" class="button is-danger">Delete Project</button>
+        </div>
+    {% endif %}
     <div class="grid grid-cols-1 sm:grid-cols-[300px_1fr] gap-4">
-        <div>
+        <div class="flex flex-col gap-2">
+            {% if g.user['id'] != project['user_id'] %}<div>Owner: {{ project['username'] }}</div>{% endif %}
             <div class="img-ctn">
-                {% if not project['image_data'] %}
+                {% if not project['image_blob'] %}
                     <div class="bg-gray-700 w-full h-full grid place-items-center">
-                        <img src="{{ url_for('static', filename='logo.svg') }}"
+                        <img width="300"
+                             height="300"
+                             src="{{ url_for('static', filename='logo.svg') }}"
                              alt="hookneedle logo because no image available" />
                     </div>
                 {% else %}
-                    <img src="{{ project['image_data'] }}"
+                    <img width="300"
+                         height="300"
+                         src="{{ project['image_blob'] }}"
                          alt="image of {{ project['name'] }}" />
                 {% endif %}
             </div>
             {% if project['link'] %}<a class="button ms-0" href="{{ project['link'] }}">Link to Pattern</a>{% endif %}
+            {% if project['upload_blob'] %}
+                <a href="{{ project['upload_blob'] }}"
+                   target="_blank"
+                   id="pattern-dwnld"
+                   class="button">Open Pattern</a>
+            {% endif %}
             <div>
                 <h2>Description</h2>
                 {% if project['desc_small'] %}
@@ -33,130 +46,184 @@
                 {% endif %}
             </div>
         </div>
-        <div class="flex flex-col gap-2">
-            <div class="flex items-end gap-4">
-                <h2>Craft</h2>
-                <div>{{ project['which_craft'] }}</div>
-            </div>
-            <div class="flex items-end gap-4">
-                {% if project['which_craft'] == 'crochet' %}
-                    <h2>Hook size</h2>
-                {% else %}
-                    <h2>Needle size</h2>
-                {% endif %}
-                {% if project['hook_needle_size'] %}
-                    <div>{{ project['hook_needle_size'] }}</div>
-                {% else %}
-                    <div>n/a</div>
-                {% endif %}
-            </div>
-            <div class="flex items-end gap-4">
-                <h2>Yarn Weight</h2>
-                {% if project['yarn_weight'] %}
-                    <div>{{ project['yarn_weight'] }}</div>
-                {% else %}
-                    <div>n/a</div>
-                {% endif %}
-            </div>
-            <hr class="my-4 w-1/3" />
-            <div class="flex items-end gap-4">
-                <h2>Status</h2>
-                {% if project['status'] %}
-                    <div>{{ project['status'] }}</div>
-                {% else %}
-                    <div>n/a</div>
-                {% endif %}
-            </div>
-            <div class="flex items-end gap-4">
-                <h2>Progress</h2>
-                {% if project['progress'] %}
-                    <progress class="progress" value="{{ project['progress'] }}" max="100"></progress>
-                {% else %}
-                    <div>n/a</div>
-                {% endif %}
-            </div>
-            <div class="flex items-end gap-4">
-                <h2>Start Date</h2>
-                {% if project['start_date'] %}
-                    <div>{{ project['start_date'] }}</div>
-                {% else %}
-                    <div>n/a</div>
+        <div class="@container">
+            <div class="grid grid-cols-1 @sm:grid-cols-[auto_auto] gap-8">
+                <div class="flex flex-col gap-2">
+                    <div class="flex items-end gap-4">
+                        <h2>Craft</h2>
+                        <div>{{ project['which_craft'] }}</div>
+                    </div>
+                    <div class="flex items-end gap-4">
+                        {% if project['which_craft'] == 'crochet' %}
+                            <h2>Hook size(s)</h2>
+                        {% else %}
+                            <h2>Needle size(s)</h2>
+                        {% endif %}
+                        {% if project['hook_needle_size'] %}
+                            <div>{{ project['hook_needle_size'] }}</div>
+                        {% else %}
+                            <div>n/a</div>
+                        {% endif %}
+                    </div>
+                    <div class="flex items-end gap-4">
+                        <h2>Yarn Weight</h2>
+                        {% if project['yarn_weight'] %}
+                            <div>{{ project['yarn_weight'] }}</div>
+                        {% else %}
+                            <div>n/a</div>
+                        {% endif %}
+                    </div>
+                    <hr class="my-4 w-1/3" />
+                    <div class="flex items-end gap-4">
+                        <h2>Status</h2>
+                        {% if project['status'] %}
+                            <div>
+                                {% for word in (project['status'].split("-")) %}{{ word + ' ' }}{% endfor %}
+                            </div>
+                        {% else %}
+                            <div>n/a</div>
+                        {% endif %}
+                    </div>
+                    <div class="flex items-end gap-4">
+                        <h2>Progress</h2>
+                        {% if project['progress'] %}
+                            <progress class="progress" value="{{ project['progress'] }}" max="100"></progress>
+                        {% else %}
+                            <div>n/a</div>
+                        {% endif %}
+                    </div>
+                    <div class="flex items-end gap-4">
+                        <h2>Start Date</h2>
+                        {% if project['start_date'] %}
+                            <div>{{ project['start_date'] }}</div>
+                        {% else %}
+                            <div>n/a</div>
+                        {% endif %}
+                    </div>
+                    <div class="flex items-end gap-4">
+                        <h2>Goal End Date</h2>
+                        {% if project['end_date'] %}
+                            <div>{{ project['end_date'] }}</div>
+                        {% else %}
+                            <div>n/a</div>
+                        {% endif %}
+                    </div>
+                </div>
+                {% if g.user['id'] == project['user_id'] %}
+                    <div class="flex flex-col gap-4 @sm:justify-self-end border-1 border-black h-fit px-4 py-2 rounded-[5px]">
+                        <div class="flex justify-between">
+                            <div class="flex flex-col">
+                                <h3>Plan</h3>
+                                <hr class="w-full">
+                                <div id="days-left"></div>
+                            </div>
+                            <a href="/plan/edit">Edit</a>
+                        </div>
+                        <div>
+                            <h3>Daily Goal</h3>
+                            <p>n/a</p>
+                        </div>
+                        <div>
+                            <h3>Weekly Goal</h3>
+                            <p>n/a</p>
+                        </div>
+                    </div>
                 {% endif %}
             </div>
         </div>
     </div>
-    <div>
-        <h2>Notes</h2>
-        <div class="text-[rgb(var(--text-color))] fill-[rgb(var(--text-color))]">
-            <div id="editor"
-                 class="bg-[rgb(var(--bkgd-color))] text-[rgb(var(--text-color))]"></div>
+    {% if g.user['id'] == project['user_id'] %}
+        <div>
+            <h2>Notes</h2>
+            <div class="text-[rgb(var(--text-color))] fill-[rgb(var(--text-color))]">
+                <div id="editor"
+                     class="bg-[rgb(var(--bkgd-color))] text-[rgb(var(--text-color))]"></div>
+            </div>
+            <div class="flex gap-2 items-center">
+                <button class="button" id="save-btn" type="submit">Save Note</button>
+                <div id="save-message" class="text-green-500"></div>
+            </div>
         </div>
-        <div class="flex gap-2 items-center">
-            <button class="button" id="save-btn" type="submit">Save Note</button>
-            <div id="save-message" class="text-green-500"></div>
-        </div>
-    </div>
+    {% endif %}
     <script>
 	let projectId = "{{ project['id'] }}";
+    let startDate = "{{ project['start_date'] }}"
+    let endDate = "{{ project['end_date'] }}"
 
-	const quill = new Quill('#editor', {
-		modules: { toolbar: true },
-		theme: 'snow',
-	});
+    
+    let loggedInUserId = "{{g.user['id']}}"
+    let userId = "{{project['user_id']}}"
+    
+    if (loggedInUserId == userId) {
+        if (startDate && endDate) {
+            let daysLeft = document.querySelector('#days-left')
+            let start = new Date(startDate);
+            let end = new Date(endDate)
+            diff = Math.abs((start - end) / (1000 * 60 * 60 * 24));
+            daysLeft.textContent = `${diff} days left`
+        }
 
-	let getNote = async () => {
-		try {
-			const response = await fetch(`/note/${projectId}`);
-			if (!response.ok) {
-				throw new Error(`Response status: ${response.status}`);
-			}
-			const res = await response.json();
-			quill.setContents(res);
-		} catch (error) {
-			console.error(error.message);
-		}
-	};
+        const quill = new Quill('#editor', {
+            modules: { toolbar: true },
+            theme: 'snow',
+        });
+    
+        let getNote = async () => {
+            try {
+                const response = await fetch(`/note/${projectId}`);
+                if (!response.ok) {
+                    throw new Error(`Response status: ${response.status}`);
+                }
+                const res = await response.json();
+                quill.setContents(res);
+            } catch (error) {
+                console.error(error.message);
+            }
+        };
+    
+        getNote();
 
-	getNote();
+        document.querySelector('#save-btn').addEventListener('click', async () => {
+            let delta = quill.getContents();
+    
+            fetch(`/note/${projectId}/create`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(delta),
+            })
+                .then(
+                    () =>
+                        (document.querySelector('#save-message').textContent =
+                            'Note Saved!')
+                )
+                .catch((error) => console.error('CAUGHT ERROR ON POST', error));
+    
+            setTimeout(() => {
+                document.querySelector('#save-message').textContent = '';
+            }, 2000);
+        });
 
-	document
-		.querySelector('#delete-btn')
-		.addEventListener('click', async () => {
-			fetch(`/project/delete/${projectId}`, {
-				method: 'DELETE',
-				headers: {
-					'Content-type': 'application/json; charset=UTF-8',
-				},
-			})
-				.then((res) => res.json())
-				.then((data) => {
-					if (data == 'project successfully deleted') {
-						window.location.replace('/');
-					}
-				})
-				.catch((error) =>
-					console.error('CAUGHT ERROR ON DELETE', error)
-				);
-		});
+        document.querySelector('#delete-btn')?.addEventListener('click', async () => {
+            if (confirm('Are you sure you want to delete this project?')) {
+                fetch(`/project/delete/${projectId}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-type': 'application/json; charset=UTF-8',
+                    },
+                })
+                    .then((res) => res.json())
+                    .then((data) => {
+                        if (data == 'project successfully deleted') {
+                            window.location.replace('/');
+                        }
+                    })
+                    .catch((error) =>
+                        console.error('CAUGHT ERROR ON DELETE', error)
+                    );
+            }
+        });
+    }
 
-	document.querySelector('#save-btn').addEventListener('click', async () => {
-		let delta = quill.getContents();
 
-		fetch(`/note/${projectId}/create`, {
-			method: 'POST',
-			headers: { 'Content-Type': 'application/json' },
-			body: JSON.stringify(delta),
-		})
-			.then(
-				() =>
-					(document.querySelector('#save-message').textContent =
-						'Note Saved!')
-			)
-			.catch((error) => console.error('CAUGHT ERROR ON POST', error));
-
-		setTimeout(() => {
-			document.querySelector('#save-message').textContent = '';
-		}, 2000);
-	});
     </script>
 {% endblock %}
