--- a/app/templates/user/edit.html
+++ b/app/templates/user/edit.html
@@ -1,58 +1,41 @@
-{% extends 'base.html' %} {% block header %} {% block title %}Edit Profile{%
-endblock %} {% endblock %} {% block content %}
-<div class="form-ctn">
-	<form
-		method="POST"
-		class="grid gap-4 max-w-[500px]"
-		enctype="multipart/form-data"
-	>
-		<div class="field">
-			<label class="label">Username</label>
-			<input
-				class="input"
-				type="text"
-				placeholder="Username"
-				name="username"
-				value="{{ user.username }}"
-			/>
-		</div>
-		<div class="field">
-			<label
-				for="image"
-				class="file-label"
-			>
-				Profile Image
-			</label>
-			<input
-				id="image"
-				class="file-input"
-				type="file"
-				name="image"
-				accept="image/png, image/jpeg, image/jpg"
-			/>
-		</div>
-		<div class="field">
-			<label class="label">Bio</label>
-
-			<textarea
-				class="input"
-				placeholder="Write a short bio for yourself!"
-				name="bio"
-			>
-{{ profile.bio }}</textarea
-			>
-		</div>
-		<div class="field">
-			<button
-				type="submit"
-				class="button is-link"
-			>
-				Submit
-			</button>
-		</div>
-	</form>
-</div>
-<script>
+{% extends 'base.html' %}
+{% block header %}
+    {% block title %}
+        Edit Profile{%
+        endblock %}
+    {% endblock %}
+    {% block content %}
+        <div class="form-ctn">
+            <form method="post"
+                  class="grid gap-4 max-w-[500px]"
+                  enctype="multipart/form-data">
+                <div class="field">
+                    <label class="label">Username</label>
+                    <input class="input"
+                           type="text"
+                           placeholder="Username"
+                           name="username"
+                           value="{{ user.username }}" />
+                </div>
+                <div class="field">
+                    <label for="image" class="file-label">Profile Image</label>
+                    <input id="image"
+                           class="file-input"
+                           type="file"
+                           name="image"
+                           accept="image/png, image/jpeg, image/jpg" />
+                </div>
+                <div class="field">
+                    <label class="label">Bio</label>
+                    <textarea class="input" placeholder="Write a short bio for yourself!" name="bio">
+{{ profile.bio }}</textarea>
+                </div>
+                <div class="field">
+                    <button type="submit" class="button is-link">Submit</button>
+                </div>
+            </form>
+        </div>
+        <script>
 	document.addEventListener('DOMContentLoaded', () => {
 		let fileType = '{{ profile["image_mimetype"]}}';
 		let fileBits = '{{ profile["image_data"]}}';
@@ -68,7 +51,6 @@ endblock %} {% endblock %} {% block content %}
 
 			// Decode Base64 string
 			const decodedData = atob(base64Data);
-			console.log(decodedData);
 
 			const byteNumbers = new Array(decodedData.length);
 
@@ -94,5 +76,5 @@ endblock %} {% endblock %} {% block content %}
 		dataTransfer.items.add(myFile);
 		fileInput.files = dataTransfer.files;
 	});
-</script>
-{% endblock %}
+        </script>
+    {% endblock %}
