--- a/app/templates/dash/index.html
+++ b/app/templates/dash/index.html
@@ -17,23 +17,30 @@
     {% else %}
         <h2>Your Dashboard</h2>
         <div class="flex flex-col w-full h-auto p-4 gap-2 border-1 rounded-[5px] border-black">
-            <h2>Notifications</h2>
+            <h3>Notifications</h3>
             {% if not notifs %}
                 <div>You have no notifications.</div>
             {% else %}
-                <ul class="flex flex-col gap-2">
+                <ul class="flex flex-col">
                     {% for notif in notifs %}
-                        <li>
-                            <a class="button is-secondary add-friend"
-                               data-id="{{ notif['user1_id'] }}">Accept Friend Request from {{ notif.username }}</a>
+                        <li class="flex items-center gap-2">
+                            <button class="button is-secondary add-friend"
+                                    data-id="{{ notif['user1_id'] }}">Accept</button>
+                            <button class="button is-danger remove-friend"
+                                    data-id="{{ notif['user1_id'] }}">Deny</button>
+                            <span>
+                                <a class="link"
+                                   href="{{ url_for('user.profile', id=notif['user1_id']) }}">{{ notif.username }}</a>
+                                wants to be your friend
+                            </span>
                         </li>
                     {% endfor %}
                 </ul>
             {% endif %}
         </div>
         <div class="grid grid-rows-1 grid-cols-2 gap-4">
-            <div class="flex flex-col w-full h-fit p-4 gap-2 border-1 rounded-[5px] border-black">
-                <h2>Friends</h2>
+            <div class="flex flex-col w-full p-4 gap-2 border-1 rounded-[5px] border-black h-fit">
+                <h3>Friends</h3>
                 <ul class="flex flex-col gap-2">
                     {% for friend in friends %}
                         <li class="bg-[#2C262C] radius-[5px] rounded-[5px]">
@@ -52,14 +59,14 @@
                                         </div>
                                     {% endif %}
                                 </div>
-                                <h3>{{ friend.friendUsername }}</h3>
+                                <h4>{{ friend.friendUsername }}</h4>
                             </a>
                         </li>
                     {% endfor %}
                 </ul>
             </div>
-            <div class="flex flex-col w-full h-auto p-4 gap-2 border-1 rounded-[5px] border-black">
-                <h2>Your Projects</h2>
+            <div class="flex flex-col w-full h-auto p-4 gap-2 border-1 rounded-[5px] border-black h-fit">
+                <h3>Your Projects</h3>
                 <a class="button" href='{{ url_for("dash.create") }}'>Add Project</a>
                 <ul class="flex flex-col gap-2">
                     {% for project in projects %}
@@ -79,7 +86,7 @@
                                         </div>
                                     {% endif %}
                                 </div>
-                                <h3 class="text-center">{{ project['name'] }}</h3>
+                                <h4 class="text-center">{{ project['name'] }}</h4>
                             </a>
                             <div class="dropdown is-right" data-key="{{ project.id }}">
                                 <div class="dropdown-trigger pe-2">
@@ -144,6 +151,7 @@
             })
 
             addFriendBtn = document.querySelectorAll('.add-friend');
+            denyFriendBtn = document.querySelectorAll('.remove-friend')
 
             addFriendBtn?.forEach(btn => {
                 btn.addEventListener('click', () => {
@@ -152,9 +160,21 @@
                     fetch(`/user/addfriend/${friendId}`, {
                             method: 'POST',
                         })
-                        .then(()=> window.location.replace(`/user/profile/${friendId}`))
+                        .then(()=> window.location.reload())
                         .catch((error) => console.error('CAUGHT ERROR ON POST', error));
                 });
+            })
+
+            denyFriendBtn?.forEach(btn => {
+                btn.addEventListener('click', () => {
+                    let friendId = btn.dataset.id;
+
+                    fetch(`/user/removefriend/${friendId}`, {
+                        method: 'POST',
+                    })
+                    .then(()=> window.location.reload())
+                    .catch((error) => console.error('CAUGHT ERROR ON POST', error));
+                })
             })
         })
     </script>
